dataset1235/2025-2/1153765216/users/4261539586/executions/2814675586_3198308593.log
== RUN (2025-08-26 18:30:36)
-- CODE: 
from math import *

raio = float(input("digite um valor: "))
volume = 4/3 * pi * raio ** 3  
print(round(volume,4))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
5.5
---- correct output:
696.91
---- user output:
digite um valor: 696.91
-- TEST CASE 2:
---- input:
1.0
---- correct output:
4.1888
---- user output:
digite um valor: 4.1888
-- TEST CASE 3:
---- input:
3.2
---- correct output:
137.2583
---- user output:
digite um valor: 137.2583
-- TEST CASE 4:
---- input:
10.0
---- correct output:
4188.7902
---- user output:
digite um valor: 4188.7902
-- TEST CASE 5:
---- input:
12.0
---- correct output:
7238.2295
---- user output:
digite um valor: 7238.2295
-- TEST CASE 6:
---- input:
0.5
---- correct output:
0.5236
---- user output:
digite um valor: 0.5236
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-26 18:30:28)
-- CODE: 
from math import *

raio = float(input("digite um valor: ") 
volume = 4/3 * pi * raio ** 3  
print(round(volume,4))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
5.5
---- correct output:
696.91
-- ERROR:
File "XXXX", line 3
    raio = float(input("digite um valor: ") 
                ^
SyntaxError: '(' was never closed
-- TEST CASE 2:
---- input:
1.0
---- correct output:
4.1888
-- ERROR:
File "XXXX", line 3
    raio = float(input("digite um valor: ") 
                ^
SyntaxError: '(' was never closed
-- TEST CASE 3:
---- input:
3.2
---- correct output:
137.2583
-- ERROR:
File "XXXX", line 3
    raio = float(input("digite um valor: ") 
                ^
SyntaxError: '(' was never closed
-- TEST CASE 4:
---- input:
10.0
---- correct output:
4188.7902
-- ERROR:
File "XXXX", line 3
    raio = float(input("digite um valor: ") 
                ^
SyntaxError: '(' was never closed
-- TEST CASE 5:
---- input:
12.0
---- correct output:
7238.2295
-- ERROR:
File "XXXX", line 3
    raio = float(input("digite um valor: ") 
                ^
SyntaxError: '(' was never closed
-- TEST CASE 6:
---- input:
0.5
---- correct output:
0.5236
-- ERROR:
File "XXXX", line 3
    raio = float(input("digite um valor: ") 
                ^
SyntaxError: '(' was never closed
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-26 18:30:42)
-- CODE: 
from math import *

raio = float(input("digite um valor: "))
volume = 4/3 * pi * raio ** 3  
print(round(volume,4))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
5.5
---- correct output:
696.91
---- user output:
digite um valor: 696.91
-- TEST CASE 2:
---- input:
1.0
---- correct output:
4.1888
---- user output:
digite um valor: 4.1888
-- TEST CASE 3:
---- input:
3.2
---- correct output:
137.2583
---- user output:
digite um valor: 137.2583
-- TEST CASE 4:
---- input:
10.0
---- correct output:
4188.7902
---- user output:
digite um valor: 4188.7902
-- TEST CASE 5:
---- input:
12.0
---- correct output:
7238.2295
---- user output:
digite um valor: 7238.2295
-- TEST CASE 6:
---- input:
0.5
---- correct output:
0.5236
---- user output:
digite um valor: 0.5236
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
